# StockResearch

./: .env.example  .gitignore  .npmrc-builds  AGENTS.md  CLAUDE.md  PPTR_IMPROVEMENT_PLAN.md  TODOS.md  package.json  pnpm-lock.yaml  pyproject.toml  reserarch.md  wrangler.toml
apps/collector/: _apply_migration.py  _backdate_profit_inflect.py  _backdate_signals.py  _backfill_dart_financials.py  _backfill_dart_scrape.py  _backfill_yfinance.py  _backtest_library_precision.py  _categorize_unclassified.py  _check_backfill.py  _check_data.py  _check_detection.py  _check_fin_table.py  _check_fp.py  _check_library.py  _check_missed_stocks.py  _check_pre_rise.py  _check_sector.py  _classify_library.py  _cleanup_categories.py  _cleanup_quant_only.py  _db_status.py  _debug_fdr.py  _debug_fp.py  _debug_kind.py  _debug_kind2.py  _debug_missing.py  _debug_naver.py  _debug_rss.py  _fix_false_positives.py  _full_pipeline.py  _issue_check.py  _keyword_scan.py  _llm_apply_verdicts.py  _llm_fetch_candidates.py  _run_backfill.py  _run_extract_signals.py  _run_pipeline.py  _run_scanner.py  _seed_filings.py  _status_check.py  (+30 more)
apps/collector/scripts/: apply_migrations.py
apps/collector/src/: filings_watch.py  financials_dart.py  financials_sec.py  macro_idea_agent.py  macro_news.py  macro_themes.py  news_rss.py  prices.py  universe.py  upsert.py
apps/collector/tests/: conftest.py  test_auto_populate.py  test_backfill_history.py  test_backtest_metrics.py  test_calibration.py  test_classifier.py  test_discover.py  test_enqueue.py  test_entry_filter.py  test_exit_rules.py  test_extract_signals.py  test_filters_kr.py  test_filters_us.py  test_fingerprint_match.py  test_golden_signal.py  test_hundredx_detectors.py  test_hundredx_scanner.py  test_keywords.py  test_missed_library_stocks.py  test_news_rss.py  (+16 more)
(+192 files in other folders)
