[project]
name = "stock-collector"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "OpenDartReader>=0.2",
    "finance-datareader>=0.9",
    "yfinance>=0.2",
    "pandas-ta>=0.3",
    "edgartools>=2.0",
    "feedparser>=6.0",
    "supabase>=2.0",
    "pydantic>=2.0",
    "tiktoken>=0.7",
    "pytest>=8.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9",
    # ML (Phase 1) — Phase 0 데이터 충분 시 활성화
    "lightgbm>=4.0",
    "scikit-learn>=1.4",
    # Optional: Bayesian base rate calibration
    # "scipy>=1.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
